<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_bg"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/progress_bar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <AutoCompleteTextView
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            />
        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            />
        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF5722"
            android:text="@string/button_login_in"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/button_create_account_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF5722"
            android:gravity="center"
            android:text="@string/button_create_account"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            />

    </LinearLayout>

</LinearLayout>