<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/gradient_bg"
    tools:context=".CreateAccountActivity">
    <ProgressBar
        android:id="@+id/progress_bar_create_act"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/userName_create_act"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/UserName"
            android:inputType="textPersonName"
            android:maxLines="1"
            />

        <AutoCompleteTextView
            android:id="@+id/email_create_act"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:layout_marginTop="16dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            />
        <EditText
            android:id="@+id/password_create_act"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            />

        <Button
            android:id="@+id/button_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#00BCD4"
            android:gravity="center"
            android:text="@string/button_create_account"
            android:backgroundTint="@color/button_color"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            />

    </LinearLayout>



</LinearLayout>