<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/gradient_bg"
        android:elevation="100dp"
        android:gravity="right"
        >

        <TextView
            android:id="@+id/list_item_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Monir"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="start"
            android:textColor="#FFEB3B"
            android:textSize="20sp" />
        <ImageButton
            android:id="@+id/list_item_share_button"
            android:src="@android:drawable/ic_menu_share"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#121010"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/list_item_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            android:src="@drawable/images2" />

        <TextView
            android:id="@+id/list_item_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/Title_list"
            android:layout_margin="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/list__item_thoughts_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_margin="5dp"
            android:text="@string/thoughts"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/list_item_time_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/time"
            android:layout_margin="5dp"
            android:textStyle="italic"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>